--- a/dataset-processing/dataset_processing_new_paul.ipynb
+++ b/dataset-processing/dataset_processing_new_paul.ipynb
@@ -1364,9 +1364,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml-env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ml-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
