final update for final project

--- a/dataset-processing/dataset_processing_new_paul.ipynb
+++ b/dataset-processing/dataset_processing_new_paul.ipynb
@@ -932,7 +932,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bag of words the tweets (for final project)"
+    "# Bag of words the tweets (added for final project)"
    ]
   },
   {
