--- a/logistic_regression_paul.ipynb
+++ b/logistic_regression_paul.ipynb
@@ -486,7 +486,7 @@
     "    elif prob_c_true > prob_a_true and prob_c_true > prob_b_true: # if prob of c is biggest\n",
     "        print(\"Based on all three probabilities this test is of class c\")\n",
     "        \n",
-    "    # for final project\n",
+    "    # code added for final project\n",
     "    mimic_probs = [prob_a_true, prob_b_true, prob_c_true]\n",
     "    print(\"\\nOutput matching sklearn ovr output:\\nProbabilities for class [a b c]:\", mimic_probs)"
    ]
