--- a/linear_regression_paul.ipynb
+++ b/linear_regression_paul.ipynb
@@ -1095,6 +1095,9 @@
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
+    "x_quadratic = x_one['Date'].values.reshape(-1, 1)\n",
+    "y_quadratic = x_one['Cases - Total'].values.reshape(-1, 1)\n",
+    "\n",
     "polynomial_features = PolynomialFeatures(degree = 2) # creates all possible \"feature matrixes\" with degree <2 to then weight each choice - documentation here https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PolynomialFeatures.html\n",
     "# for degree = 2 and features = [a, b], this would return [1, a, b, ab, a^2, b^2]\n",
     "x_poly = polynomial_features.fit_transform(x_quadratic) # fits and transforms the data...I think this also calculates the coefficients/weights for each \"feature matrix option\"\n",
