--- a/neural_nets/cnns/convolutional_neural_network_tuning.ipynb
+++ b/neural_nets/cnns/convolutional_neural_network_tuning.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,16 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1a792d490>"
+       "<matplotlib.image.AxesImage at 0x1a99fff70>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "8"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,18 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
     "\n",
     "model.add(Conv2D(input_shape=IMG_SHAPE,\n",
-    "                 filters=16, kernel_size=3, strides=3, padding='same'))\n",
+    "                 filters=8, kernel_size=2, strides=2, padding='same'))\n",
     "model.add(ReLU())\n",
-    "model.add(Conv2D(filters=8, kernel_size=3, strides=3, padding='same'))\n",
+    "model.add(Conv2D(filters=24, kernel_size=4, strides=4, padding='same'))\n",
     "model.add(ReLU())\n",
-    "model.add(Conv2D(filters=10, kernel_size=4, strides=4, padding='same'))\n",
+    "model.add(Conv2D(filters=32, kernel_size=10, strides=10, padding='same'))\n",
     "model.add(ReLU())\n",
     "\n",
     "# model.add(Conv2D(filters=5, kernel_size=3, strides=2, padding='same', activation='relu'))\n",
@@ -181,30 +181,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/4\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.2347\n",
-      "Epoch 2/4\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2954\n",
-      "Epoch 3/4\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2387\n",
-      "Epoch 4/4\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2196\n"
+      "Epoch 1/6\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.5731\n",
+      "Epoch 2/6\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1474\n",
+      "Epoch 3/6\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1188\n",
+      "Epoch 4/6\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1042\n",
+      "Epoch 5/6\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0852\n",
+      "Epoch 6/6\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0808\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1a6e57850>"
+       "<tensorflow.python.keras.callbacks.History at 0x1a9a6c4c0>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +224,7 @@
     "model.compile(optimizer=SGD(), loss='categorical_crossentropy')\n",
     "\n",
     "# fit the model to the training data\n",
-    "model.fit(images_3d_train, labels_onehot_train, epochs=4)"
+    "model.fit(images_3d_train, labels_onehot_train, epochs=6)"
    ]
   },
   {
@@ -232,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,16 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9376"
+       "0.972"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,22 +273,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.95124378, 0.98727273, 0.92850334, 0.89577465, 0.95715778,\n",
-       "        0.88807531, 0.9600432 , 0.95588235, 0.91891892, 0.92978937]),\n",
-       " array([0.9755102 , 0.95682819, 0.94379845, 0.94455446, 0.93279022,\n",
-       "        0.95179372, 0.92797495, 0.94844358, 0.87268994, 0.91873142]),\n",
-       " array([0.96322418, 0.97181208, 0.93608842, 0.91951807, 0.94481692,\n",
-       "        0.91883117, 0.94373673, 0.95214844, 0.895208  , 0.92422732]),\n",
+       "(array([0.96893788, 0.98253275, 0.97007722, 0.98665298, 0.97371082,\n",
+       "        0.95504386, 0.97089397, 0.97076023, 0.95679012, 0.98174442]),\n",
+       " array([0.98673469, 0.99118943, 0.97383721, 0.95148515, 0.98065173,\n",
+       "        0.9764574 , 0.97494781, 0.9688716 , 0.95482546, 0.95936571]),\n",
+       " array([0.97775531, 0.98684211, 0.97195358, 0.96875   , 0.97716895,\n",
+       "        0.96563193, 0.97291667, 0.969815  , 0.95580678, 0.97042607]),\n",
        " array([ 980, 1135, 1032, 1010,  982,  892,  958, 1028,  974, 1009]))"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 355,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,17 +319,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What my fiddling accomplished\n",
+    "## Analysis\n",
     "\n",
-    "Adding "
+    "To start, I remembered from class discussions and the coursenotes that ReLU was the most commonly used activation function—so I wanted to try it out. I found that while adding the ReLU activation function and alternating ReLU layers with convolutional layers produced drastically better results, it was hard to figure out what else improved the model because there was so much variance. What I did observe:\n",
+    "- Starting out with less filters and smaller kernel sizes and then (roughly) doubling filters and kernel size when adding the next convolutional layer worked well.\n",
+    "- I ended up with 3 convo+relu pairs of layers. While I could achieve slightly higher accuracy (plus ~0.01) by adding a fourth pair of layers, I found that this drastically increased the run time so I deemed it not worth it.\n",
+    "    - When adding the fourth pair of layers, I did see a reasonably large reduction in the loss per epoch, but as I mentioned the accuracy stayed pretty close.\n",
+    "- I ended up with 6 epochs, because I wanted to strike a balance between more epochs (more time to improve the model but more run time) and less epochs (less time to improve but less run time)—6 seemed like a good number in the middle (and because I wanted to keep all my numbers even ;) ).\n",
+    "- I drew some inspiration from Brandon Cho - he helped me understand A LOT of this and his explanations in his [CNN tuning notebook](https://github.com/bcho04/nueva-ml/blob/master/Convolutional%20Neural%20Networks/ConvolutionalNeuralNetworkTuning.ipynb) about the usefulness of the relu (and also max-pooling) layers were very helpful."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
