finished nlp assignment (for now)

--- a/neural_nets/nlp/word_vectors_tutorial.ipynb
+++ b/neural_nets/nlp/word_vectors_tutorial.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        " ('kings', 0.6273427605628967)]"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        " ('carnivore', 0.6794543266296387)]"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "'laptop'"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "array([0.205414  , 0.36557418, 0.6597437 ], dtype=float32)"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
        " ('GPS', 0.730388879776001)]"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
        " 'G.P.S.']"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
        "30438"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,14 +1330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:6 out of the last 10 calls to <function Model.make_predict_function.<locals>.predict_function at 0x1810289d0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+      "WARNING:tensorflow:6 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x1530a40d0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
      ]
     },
     {
@@ -1371,7 +1371,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
        "        True])"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1717,7 @@
        " 32]"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -2769,7 +2769,7 @@
        " ...}"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2792,7 +2792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -2801,7 +2801,7 @@
        "\"START this film was just brilliant casting location scenery story direction everyone's really suited the part they played and you could just imagine being there robert redford's is an amazing actor and now the same being director norman's father came from the same scottish island as myself so i loved the fact there was a real connection with this film the witty remarks throughout the film were great it was just brilliant so much that i bought the film as soon as it was released for retail and would recommend it to everyone to watch and the fly fishing was amazing really cried at the end it was so sad and you know what they say if you cry at a film it must have been good and this definitely was also congratulations to the two little boy's that played the part's of norman and paul they were just brilliant children are often left out of the praising list i think because the stars that play them all grown up are such a big profile for the whole film but these children are amazing and should be praised for what they have done don't you think the whole story was so lovely because it was true and was someone's life after all that was shared with us all\""
       ]
      },
-     "execution_count": 288,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2820,7 +2820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2830,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2841,7 +2841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2859,7 +2859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -2884,7 +2884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -2905,7 +2905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2923,7 +2923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2946,23 +2946,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "391/391 [==============================] - 29s 72ms/step - loss: 0.5280 - binary_accuracy: 0.6653\n"
+      "391/391 [==============================] - 29s 73ms/step - loss: 0.5108 - binary_accuracy: 0.6991\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1515cdd00>"
+       "<tensorflow.python.keras.callbacks.History at 0x15613db20>"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2980,15 +2980,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "782/782 [==============================] - 10s 13ms/step - loss: 0.2590 - binary_accuracy: 0.8914\n",
-      "loss: 0.25904911756515503 accuracy: 0.8913999795913696\n"
+      "782/782 [==============================] - 9s 11ms/step - loss: 0.2603 - binary_accuracy: 0.8932\n",
+      "loss: 0.2602842450141907 accuracy: 0.8932399749755859\n"
      ]
     }
    ],
@@ -3012,8 +3012,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification With Pre-Trained Word Vectors"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -4022,12 +4029,14 @@
        " ...}"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# create a simple dict containing each word and an index\n",
+    "\n",
     "word_index = {}\n",
     "word_index = dict(zip(imdb_map.values(), range(len(imdb_map))))\n",
     "word_index"
@@ -4035,18 +4044,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted 88587 words (0 misses)\n"
+      "Converted 0 words (0 misses)\n"
      ]
     }
    ],
    "source": [
+    "# make a matrix with the pre-trained vectors for each index\n",
+    "# to be input to the Embedding layer\n",
+    "\n",
     "num_tokens = len(word_index) + 2\n",
     "embedding_dim = 100\n",
     "hits = 0\n",
@@ -4055,25 +4067,25 @@
     "imdb_map_inv = {v: k for k, v in imdb_map.items()}\n",
     "\n",
     "# Prepare embedding matrix\n",
+    "\n",
     "embedding_matrix = np.zeros((num_tokens, embedding_dim))\n",
+    "\n",
     "for word, i in word_index.items():\n",
     "    embedding_vector = imdb_map_inv.get(word)\n",
-    "    if embedding_vector is not None:\n",
-    "        # Words not found in embedding index will be all-zeros.\n",
-    "        # This includes the representation for \"padding\" and \"OOV\"\n",
-    "        embedding_matrix[i] = embedding_vector\n",
-    "        hits += 1\n",
-    "    else:\n",
-    "        misses += 1\n",
+    "    embedding_matrix[i] = embedding_vector\n",
+    "    \n",
     "print(\"Converted %d words (%d misses)\" % (hits, misses))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create the Embedding layer with the pre-trained vectors\n",
+    "# trainable=False to keep the embeddings fixed\n",
+    "\n",
     "embedding_layer = Embedding(\n",
     "    num_tokens,\n",
     "    embedding_dim,\n",
@@ -4085,10 +4097,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define the model\n",
+    "\n",
     "pretrained_model = Sequential()\n",
     "pretrained_model.add(embedding_layer)\n",
     "pretrained_model.add(Conv1D(filters=32, kernel_size=5, activation='relu'))\n",
@@ -4101,48 +4115,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "391/391 [==============================] - 15s 39ms/step - loss: 7945.0222 - binary_accuracy: 0.5073\n"
+      "391/391 [==============================] - 16s 41ms/step - loss: 19395.7466 - binary_accuracy: 0.4967\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x14f470e80>"
+       "<tensorflow.python.keras.callbacks.History at 0x1527fc2e0>"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# fit the model\n",
+    "\n",
     "pretrained_model.fit(x_train_padded, y_train, epochs=1, batch_size=64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "782/782 [==============================] - 10s 12ms/step - loss: 3.9806 - binary_accuracy: 0.5031\n",
-      "loss: 3.980632781982422 accuracy: 0.5031200051307678\n"
+      "782/782 [==============================] - 10s 12ms/step - loss: 6.5471 - binary_accuracy: 0.4907\n",
+      "loss: 6.547122001647949 accuracy: 0.4906800091266632\n"
      ]
     }
    ],
    "source": [
+    "# assess the model\n",
+    "\n",
     "pretrained_scores = pretrained_model.evaluate(x_test_padded, y_test)\n",
     "print('loss: {} accuracy: {}'.format(*pretrained_scores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis\n",
+    "I used [this Keras article](https://keras.io/examples/nlp/pretrained_word_embeddings/) about using pre-trained word embeddings to create the pre-trained embedding layer. I used the same model structure as the non-pre-trained model, because I wanted to be able to compare the results better. We see that the pre-trained model does much worse (at least in terms of accuracy) than the non-pre-trained model—0.5 to 0.9 accuracy. The loss is correspondingly much larger as well.\n",
+    "\n",
+    "However, I am confused about why this is true and what these models are classifying. If you are reading this sentence, that means I'm planning to meet with you soon!"
    ]
   },
   {
