started work on rnns

--- a/neural_nets/nlp/word_vectors_tutorial.ipynb
+++ b/neural_nets/nlp/word_vectors_tutorial.ipynb
@@ -4168,9 +4168,10 @@
    "metadata": {},
    "source": [
     "## Analysis\n",
-    "I used [this Keras article](https://keras.io/examples/nlp/pretrained_word_embeddings/) about using pre-trained word embeddings to create the pre-trained embedding layer. I used the same model structure as the non-pre-trained model, because I wanted to be able to compare the results better. We see that the pre-trained model does much worse (at least in terms of accuracy) than the non-pre-trained model—0.5 to 0.9 accuracy. The loss is correspondingly much larger as well.\n",
+    "I used [this Keras article](https://keras.io/examples/nlp/pretrained_word_embeddings/) to create the pre-trained embedding layer. I used the same model \"structure\" as the non-pre-trained model, because I wanted to be able to compare the results better—the results being that the pre-trained model scores 50% accuracy, the worst possible score.\n",
     "\n",
-    "However, I am confused about why this is true and what these models are classifying. If you are reading this sentence, that means I'm planning to meet with you soon!"
+    "\n",
+    "\n"
    ]
   },
   {
