completed rl assignment, fixed nlp assignment

--- a/neural_nets/nlp/word_vectors_tutorial.ipynb
+++ b/neural_nets/nlp/word_vectors_tutorial.ipynb
@@ -1203,7 +1203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get_keras_embedding() was deprecated, instead I use this\n",
+    "# get_keras_embedding() was deprecated, instead I used this\n",
     "# from https://github.com/RaRe-Technologies/gensim/wiki/Using-Gensim-Embeddings-with-Keras-and-Tensorflow\n",
     "\n",
     "def gensim_to_keras_embedding(keyed_vectors, train_embeddings=False):\n",
@@ -4061,8 +4061,6 @@
     "\n",
     "num_tokens = len(word_index) + 2\n",
     "embedding_dim = 100\n",
-    "hits = 0\n",
-    "misses = 0\n",
     "\n",
     "imdb_map_inv = {v: k for k, v in imdb_map.items()}\n",
     "\n",
@@ -4072,9 +4070,7 @@
     "\n",
     "for word, i in word_index.items():\n",
     "    embedding_vector = imdb_map_inv.get(word)\n",
-    "    embedding_matrix[i] = embedding_vector\n",
-    "    \n",
-    "print(\"Converted %d words (%d misses)\" % (hits, misses))"
+    "    embedding_matrix[i] = embedding_vector"
    ]
   },
   {
@@ -4168,10 +4164,24 @@
    "metadata": {},
    "source": [
     "## Analysis\n",
-    "I used [this Keras article](https://keras.io/examples/nlp/pretrained_word_embeddings/) to create the pre-trained embedding layer. I used the same model \"structure\" as the non-pre-trained model, because I wanted to be able to compare the results better—the results being that the pre-trained model scores 50% accuracy, the worst possible score.\n",
+    "I used [this Keras article](https://keras.io/examples/nlp/pretrained_word_embeddings/) to create the pre-trained embedding layer. I used the same model \"structure\" as the non-pre-trained model, because I wanted to be able to compare the results without any extra variables. \n",
+    "\n",
+    "The pre-trained model scored 50% accuracy, the worst possible score. The model was effectively guessing. This is because of a mismatch in IDs: the IDs created when we created the matrix are completely different than the word vectors \n",
     "\n",
     "\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Imdb is 2 Classs set so 0.5 is literally the worst accuracy score\n",
+    "Started with the imdvb reviews - trained a model on it and got 90% accuracy\n",
+    "\n",
+    "Two different corpuses of words - pertained is from routers\n",
+    "Words have generally similar meanings between corpuses\n",
+    "\n",
+    "Id from the word vectors from movie removed\n",
+    "\n",
+    "Pre-trained vectors are different from vectors from imdb"
    ]
   },
   {
