--- a/comp_vision/filters/Filters.ipynb
+++ b/comp_vision/filters/Filters.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
     "    \"\"\"\n",
     "    \n",
     "    out = image.copy()\n",
-    "    full_channels = False\n",
+    "    full_channels = False # if we don't want to filter a specific channel\n",
     "    \n",
     "    if channel == space:\n",
     "        full_channels = True\n",
@@ -386,18 +386,18 @@
     "                        \n",
     "                        # replicate edge\n",
     "                        elif edge_behavior == \"replicate\":\n",
-    "                            if image_row + image_row_offset < 0:\n",
+    "                            if image_row + image_row_offset < 0: # off the top\n",
     "                                cur_row = 0\n",
-    "                            elif image_row + image_row_offset >= image.shape[0]:\n",
+    "                            elif image_row + image_row_offset >= image.shape[0]: # off the bottom\n",
     "                                cur_row = image.shape[0]-1\n",
-    "                            else:\n",
+    "                            else: # not off the rows\n",
     "                                cur_row = image_row + image_row_offset\n",
     "                            \n",
-    "                            if image_column + image_column_offset < 0:\n",
+    "                            if image_column + image_column_offset < 0: # off the left\n",
     "                                cur_col = 0\n",
-    "                            elif image_column + image_column_offset >= image.shape[1]:\n",
+    "                            elif image_column + image_column_offset >= image.shape[1]: # off the right\n",
     "                                cur_col = image.shape[1]-1\n",
-    "                            else:\n",
+    "                            else: # not off the columns\n",
     "                                cur_col = image_column + image_column_offset\n",
     "\n",
     "                            image_value = image[cur_row][cur_col] if full_channels else image[cur_row][cur_col][channel_index]\n",
@@ -405,18 +405,18 @@
     "                        # mirror edge\n",
     "                        elif edge_behavior == \"mirror\":\n",
     "                            \n",
-    "                            if image_row + image_row_offset < 0:\n",
+    "                            if image_row + image_row_offset < 0: # off the top\n",
     "                                off_row = 0 - (image_row + image_row_offset)\n",
-    "                            elif image_row + image_row_offset >= image.shape[0]:\n",
+    "                            elif image_row + image_row_offset >= image.shape[0]: # off the bottom\n",
     "                                off_row = image.shape[0] - 1 - ((image_row + image_row_offset) - image.shape[0])\n",
-    "                            else:\n",
+    "                            else: # not off the rows\n",
     "                                off_row = image_row + image_row_offset\n",
     "                            \n",
-    "                            if image_column + image_column_offset < 0:\n",
+    "                            if image_column + image_column_offset < 0: # off the left\n",
     "                                off_col = 0 - (image_column + image_column_offset)\n",
-    "                            elif image_column + image_column_offset >= image.shape[1]:\n",
+    "                            elif image_column + image_column_offset >= image.shape[1]: # off the right\n",
     "                                off_col = image.shape[1] - 1 - ((image_column + image_column_offset) - image.shape[1])\n",
-    "                            else:\n",
+    "                            else: # not off the columns\n",
     "                                off_col = image_column + image_column_offset\n",
     "\n",
     "                            image_value = image[off_row][off_col] if full_channels else image[off_row][off_col][channel_index]\n",
