--- a/comp_vision/filters/Filters.ipynb
+++ b/comp_vision/filters/Filters.ipynb
@@ -840,6 +840,7 @@
     "        for image_column in range(image.shape[1]):\n",
     "            \n",
     "            # take slice of image that matches the current kernel, without going out of bounds\n",
+    "            # to be multiplied by kernel\n",
     "            image_slice = image[image_row:min(image.shape[0]-1, image_row+(kernel.shape[0]//2)), image_column:min(image_column.shape[1]-1, image_column+(kernel.shape[1]//2))]\n",
     "            \n",
     "            # add out of bounds values so image_slice.shape == kernel.shape\n",
@@ -848,6 +849,7 @@
     "            \"\"\"\n",
     "            \n",
     "            # multiply slice by kernel\n",
+    "            # vectorized using numpy, much faster than for loops!\n",
     "            sliceXkernel = image_slice * kernel\n",
     "            \n",
     "            # take the sum\n",
