rather large update including canny edge detector

--- a/comp_vision/filters/Filters.ipynb
+++ b/comp_vision/filters/Filters.ipynb
@@ -841,7 +841,9 @@
     "            \n",
     "            # take slice of image that matches the current kernel, without going out of bounds\n",
     "            # to be multiplied by kernel\n",
-    "            image_slice = image[image_row:min(image.shape[0]-1, image_row+(kernel.shape[0]//2)), image_column:min(image_column.shape[1]-1, image_column+(kernel.shape[1]//2))]\n",
+    "            image_row_bound = min(image.shape[0]-1, image_row+(kernel.shape[0]//2))\n",
+    "            image_col_bound = min(image.shape[1]-1, image_column+(kernel.shape[1]//2))\n",
+    "            image_slice = image[image_row:image_row_bound, image_column:image_column_bound]\n",
     "            \n",
     "            # add out of bounds values so image_slice.shape == kernel.shape\n",
     "            \"\"\"\n",
